temporary fix for visible titles

--- a/reception/media/css/base.css
+++ b/reception/media/css/base.css
@@ -757,3 +757,6 @@ table#change-history tbody th {
     color: #666;
 }
 
+#titles{
+    display: table-row!important;
+}
